#PINSAUDE - Setor Operacional aceita múltiplas Modalidades; corrige 409 ao editar e usa Switch no lugar de checkbox
- Corrige a sugestão automática do texto de PDF para usar o Tipo de Escala (Plantonista/Diarista)
  em vez do nome específico da modalidade escolhida.
- Setor Operacional passa a aceitar mais de uma Modalidade vinculada (antes só 1): nova tabela
  N:N faturamento.setor_operacional_modalidades (migration V39), substitui a FK única modalidade_id
  (V38, removida). Backfill preserva o vínculo único de cada setor já cadastrado.
- Cadastro do Setor: campo de Modalidade vira uma lista de Switch (padrão do projeto, substitui
  checkbox) com scroll — sugestão do texto do PDF segue a primeira modalidade marcada.
- Nova Frequência Médica (gestor e Portal): quando o setor tem modalidades de mais de um Tipo de
  Escala, volta a perguntar qual usar; quando tem mais de uma modalidade Diarista, volta a
  perguntar qual delas (escopado às modalidades do próprio setor, não o catálogo inteiro do
  tomador). Com só 1 modalidade cadastrada no setor, continua tudo automático. Plantonista segue
  escolhendo modalidade por lançamento, sem mudança.
- services/portal: getSetoresDoMedicoNoTomador reescrito para expor a lista de modalidades por
  setor (LEFT JOIN + agrupamento em Java via ResultSetExtractor).
- Corrige 409 "Registro duplicado" ao editar um setor mantendo uma modalidade já vinculada e
  adicionando outra: TomadorService.atualizarServicoOperacional fazia delete+insert do vínculo
  N:N na mesma transação sem flush — Hibernate executa INSERTs antes de DELETEs no flush padrão,
  causando colisão com o UNIQUE (setor_id, modalidade_id) da linha antiga ainda não removida.
  Corrigido com setorModalidadeRepo.flush() explícito entre o delete e o insert.

Backend: mvn test em faturamento (273/273) e portal (12/13, só a falha pré-existente já
documentada em extrato_semImplementacao_retornaListaVazia). Frontend: tsc --noEmit limpo.
Bug do 409 reproduzido e confirmado corrigi